started working on footer - fixed z-index

--- a/src/scss/components/_divider.scss
+++ b/src/scss/components/_divider.scss
@@ -1,14 +1,13 @@
 @use '../util/' as util;
 
 .__divider-container {
-    margin-top: util.rem(64);
-    margin-bottom: util.rem(64);
+    margin-top: util.rem(128);
     position: relative;
     left: 50%;
     transform: translateX(-50%);
 
     &.__divider {
-        position: absolute;
+        position: relative;
         width: util.rem(56);
         height: util.rem(56);
         border-radius: 50%;
@@ -18,6 +17,7 @@
         line-height: 50px;
         font-size: 24px;
         font-weight: bold;
+        z-index: 9999;
 
 
         &::before {
@@ -35,7 +35,7 @@
 
     &.__divider-number {
         position: absolute;
-        transform: translate(-50%, -120%);
+        transform: translate(-50%, -250%);
         color: hsl(240, 6%, 35%);
         font-size: util.rem(16);
         font-weight: 900;
